started styling header

--- a/index.html
+++ b/index.html
@@ -11,10 +11,43 @@
 <body>
     <header>
         <div class="container">
-            <div class="debug-box">
-                CONTENT
-            </div>
+            <nav>         
+                <ul class="white">
+                    <li class="logo">
+                        <a href="">
+                            <img src="./img/logo.svg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">Scarica</a>
+                    </li>
+                    <li>
+                        <a href="">Perché Discord</a>
+                    </li>
+                    <li>
+                        <a href="">Nitro</a>
+                    </li>
+                    <li>
+                        <a href="">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a href="">Assistenza</a>
+                    </li>
+                </ul>
+                <div>
+                    ACCEDI
+                </div>
+            </nav>
+            <div>
+                <h1>
 
+                </h1>
+                <p>
+
+                </p>
+                <a href="">SCARICA PER MAC</a>
+                <a href="">APRI DISCORD NEL TUO BROWSER</a>
+            </div>
         </div>
     </header>
 </body>
