styling floating header

--- a/index.html
+++ b/index.html
@@ -11,31 +11,49 @@
 <body>
     
     <div class="container">
-        <header>
-            <img src="" alt="">
-            <nav>
-                <ul>
-                    <li>
-                        
-                    </li>
-                    <li>
-
-                    </li>
-                    <li>
-
-                    </li>
-                    <li>
-
-                    </li>
-                    <li>
-
-                    </li>
-                    <li>
-
-                    </li>
-                </ul>
-            </nav>
-        </header>
+        <div class="wd80">
+            <header class="">
+                <div class="col1 float">
+                    <img class="logo" src="./img/logo.svg" alt="">
+                </div>
+                <div class="col2 float clearfix">
+                    <nav class="">
+                        <ul>
+                            <li>
+                                <a href="">
+                                    PROVA
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    PROVA
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    PROVA
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    PROVA
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    PROVA
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    ACCEDI
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </header>
+        </div>
     </div>
 
     <div class="container">
