--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <div class="container">
         <div class="wd80">
-            <header class="">
+            <header>
                 <div class="col1 float">
                     <img class="logo" src="./img/logo.svg" alt="">
                 </div>
@@ -44,7 +44,7 @@
                                     PROVA
                                 </a>
                             </li>
-                            <li>
+                            <li class="login">
                                 <a href="">
                                     ACCEDI
                                 </a>
