--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-    <div class="container topbackground">
+    <div class="container topbackground clearfix">
         <div class="wd80">
             <header>
                 <div class="col1 float">
@@ -56,10 +56,10 @@
         </div>
     </div>
 
-    <div class="container herobanner">
-        <section>
+    <div class="whitetext container herobanner">
+        <section class="herosection wd80 centertext">
             <h1>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Il tuo posto per parlare
             </h1>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Id possimus eaque autem qui ea quis. Magni aut voluptas vero totam, porro ut velit excepturi perferendis nesciunt aliquam, aliquid fugiat autem?
