added first main section and img

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-    <div class="container topbackground clearfix">
+    <div class=" topbackground clearfix">
         <div class="wd80">
             <header>
                 <div class="col1 float">
@@ -56,7 +56,7 @@
         </div>
     </div>
 
-    <div class="whitetext container herobanner">
+    <div class="whitetext  herobanner">
         <section class="herosection wd80 centertext">
             <h1>
                 Il tuo posto per parlare
@@ -64,9 +64,23 @@
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Id possimus eaque autem qui ea quis. Magni aut voluptas vero totam, porro ut velit excepturi perferendis nesciunt aliquam, aliquid fugiat autem?
             </p>
-            <a href=""></a>
-            <a href=""></a>
+            <a class="btn mtop25" href="">Scarica per Mac</a>
+            <a class="btn mtop25" href="">Scarica per Mac</a>
         </section>
     </div>
+
+    <main class="container">
+        <section>
+            <img src="./img/item1.svg" alt="">
+        </section>
+        <section>
+            <h2>
+
+            </h2>
+            <p>
+
+            </p>
+        </section>
+    </main>
 </body>
 </html>
