added all floating section and started styling

--- a/index.html
+++ b/index.html
@@ -69,42 +69,51 @@
         </section>
     </div>
 
-    <main class="container sectionmargin">
-        <section class="float">
-            <img src="./img/item1.svg" alt="">
-        </section>
-        <section class="sectionmargin clearfix">
-            <h2>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, quae itaque quasi fugit labore neque sint. Ipsam repellat optio a quasi at pariatur voluptatum temporibus quidem! Aliquam rerum est possimus.
-            </h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptatem iusto ad veniam eligendi aut nulla eaque expedita laborum iste commodi ipsa eos sit autem quibusdam modi cum molestiae odit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, similique ex, nihil, nobis illo aperiam veritatis earum harum dicta quasi sint iste cumque maiores ratione vitae deleniti quidem rem ipsa!
-            </p>
-        </section>
+    <main class="sectionmargin">
+        <div class="container">
+            <section class="float">
+                <img src="./img/item1.svg" alt="">
+            </section>
+            <section class="sectionmargin clearfix">
+                <h2>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, quae itaque quasi fugit labore neque sint. Ipsam repellat optio a quasi at pariatur voluptatum temporibus quidem! Aliquam rerum est possimus.
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptatem iusto ad veniam eligendi aut nulla eaque expedita laborum iste commodi ipsa eos sit autem quibusdam modi cum molestiae odit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, similique ex, nihil, nobis illo aperiam veritatis earum harum dicta quasi sint iste cumque maiores ratione vitae deleniti quidem rem ipsa!
+                </p>
+            </section>
+        </div>
 
-        <section class="midsection float">
-            <img src="./img/item1.svg" alt="">
-        </section>
-        <section class="sectionmargin clearfix">
-            <h2>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, quae itaque quasi fugit labore neque sint. Ipsam repellat optio a quasi at pariatur voluptatum temporibus quidem! Aliquam rerum est possimus.
-            </h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptatem iusto ad veniam eligendi aut nulla eaque expedita laborum iste commodi ipsa eos sit autem quibusdam modi cum molestiae odit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, similique ex, nihil, nobis illo aperiam veritatis earum harum dicta quasi sint iste cumque maiores ratione vitae deleniti quidem rem ipsa!
-            </p>
-        </section>
+        <div class="midsection">
+            <div class="container">
+                <section class="float">
+                    <img src="./img/item1.svg" alt="">
+                </section>
+                <section class="sectionmargin clearfix">
+                    <h2>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, quae itaque quasi fugit labore neque sint. Ipsam repellat optio a quasi at pariatur voluptatum temporibus quidem! Aliquam rerum est possimus.
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptatem iusto ad veniam eligendi aut nulla eaque expedita laborum iste commodi ipsa eos sit autem quibusdam modi cum molestiae odit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, similique ex, nihil, nobis illo aperiam veritatis earum harum dicta quasi sint iste cumque maiores ratione vitae deleniti quidem rem ipsa!
+                    </p>
+                </section>
+            </div>           
+        </div>
 
-        <section class="float">
-            <img src="./img/item1.svg" alt="">
-        </section>
-        <section class="sectionmargin clearfix">
-            <h2>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, quae itaque quasi fugit labore neque sint. Ipsam repellat optio a quasi at pariatur voluptatum temporibus quidem! Aliquam rerum est possimus.
-            </h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptatem iusto ad veniam eligendi aut nulla eaque expedita laborum iste commodi ipsa eos sit autem quibusdam modi cum molestiae odit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, similique ex, nihil, nobis illo aperiam veritatis earum harum dicta quasi sint iste cumque maiores ratione vitae deleniti quidem rem ipsa!
-            </p>
-        </section>
+        <div class="container">
+            <section class="float">
+                <img src="./img/item1.svg" alt="">
+            </section>
+            <section class="sectionmargin clearfix">
+                <h2>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, quae itaque quasi fugit labore neque sint. Ipsam repellat optio a quasi at pariatur voluptatum temporibus quidem! Aliquam rerum est possimus.
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptatem iusto ad veniam eligendi aut nulla eaque expedita laborum iste commodi ipsa eos sit autem quibusdam modi cum molestiae odit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, similique ex, nihil, nobis illo aperiam veritatis earum harum dicta quasi sint iste cumque maiores ratione vitae deleniti quidem rem ipsa!
+                </p>
+            </section>
+        </div>
+        
     </main>
     
 </body>
