added h2 and ul under footer

--- a/index.html
+++ b/index.html
@@ -141,8 +141,15 @@
         <footer>
             <div>
                 <h2>
-    
+                    Il tuo posto per parlare
                 </h2>
+
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
     
             </div>
         </footer>
